<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="StrackerCraneRack" Id="{4b2e583f-2843-41f0-a347-8e034a86322c}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
TYPE StrackerCraneRack :
STRUCT
	
	(* Outputs del Almacen *)
	TargetPosition: INT;
	Left:BOOL;
	Right:BOOL;
	Lift:BOOL;
	
	(* Inputs del Almacen *)
	MovingX:BOOL;
	MovingZ:BOOL;
	LeftLimit:BOOL;
	MiddleLimit:BOOL;
	RightLimit:BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>